[gd_scene load_steps=2 format=3 uid="uid://dy0vkcxgaln1"]

[ext_resource type="Script" uid="uid://bmeguq34tdox" path="res://scripts/dice_set_menu.gd" id="1_bf37c"]

[node name="DiceSetMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -148.0
offset_right = 134.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_bf37c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DiceSetName" type="LineEdit" parent="MarginContainer/VBoxContainer/TitleBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Dice Set"
context_menu_enabled = false
flat = true
select_all_on_focus = true

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="ColorContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ColorContainer"]
layout_mode = 2
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/ColorContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="InfluencesWorldColorContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/InfluencesWorldColorContainer"]
layout_mode = 2
text = "Influences World Color"

[node name="InfluenceWorldColorCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/InfluencesWorldColorContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dice"
horizontal_alignment = 1

[node name="DicePlusButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DiceListingContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_changed" from="MarginContainer/VBoxContainer/TitleBar/DiceSetName" to="." method="_on_dice_set_name_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/ColorContainer/ColorPickerButton" to="." method="_on_color_picker_color_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/InfluencesWorldColorContainer/InfluenceWorldColorCheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DicePlusButton" to="." method="_on_dice_plus_button_pressed"]
